# scoped_static

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
src/: lib.rs  scoped.rs  scoped_pin.rs  scoped_ref.rs  utils.rs
