[package]
name = "scoped_static"
description = "Safe promotion of lifetimes to static"
repository = "https://github.com/mcmah309/scoped_static"
license = "Apache-2.0"
version = "0.3.0"
edition = "2024"

[dependencies]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []
test = []

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]